plugins {
    id 'java'
}

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

group = 'nerio.jesse'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
    flatDir {
        dirs 'libs'
    }
}

dependencies {
    testImplementation platform('org.junit:junit-bom:5.9.1')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    implementation name: "jogl-all"
    implementation name: "gluegen-rt"
    implementation name: "gluegen-rt-natives-windows-amd64"
    implementation name: "jogl-all-natives-windows-amd64"
}

test {
    useJUnitPlatform()
}

task addNativeLibs(type: Copy) {
    from 'libs/chrome_elf.dll'
    into "build"
}

build.dependsOn addNativeLibs